# val-ridgehacks

bots/: Dockerfile  random_bot.py
server/: Cargo.toml
server/src/: entity.rs  game.rs  main.rs  ws.rs
site/: package.json
site/src/: fonts.css
site/src/routes/: __layout.svelte  dogfight.svelte  index.svelte  val.svelte
