[package]
name = "artemis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
bytes = "1.1.0"
euclid = { version = "0.22.7", features = ["serde"] }
futures = "0.3.21"
rand = "0.8.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
tokio-tungstenite = "0.17.1"
tungstenite = "0.17.2"
warp = "0.3.2"

[features]

